syntax = "proto3";

package com.vsu001.ethernet.core;

option java_multiple_files = true;
option java_package = "com.vsu001.ethernet.core.model";
option java_outer_classname = "LogProto";

import "google/protobuf/timestamp.proto";

message Log {
  // Integer of the log index position in the block
  int64 log_index = 1;

  // Hash of the transactions this log was created from
  string transaction_hash = 2;

  // Integer of the transactions index position log was created from
  int64 transaction_index = 3;

  // Address from which this log originated
  string address = 4;

  // Contains one or more 32 Bytes non-indexed arguments of the log
  string data = 5;

  // Indexed log arguments (0 to 4 32-byte hex strings)
  // In solidity:
  // The first topic is the hash of the signature of the event
  // (e.g. Deposit(address,bytes32,uint256))
  // except you declared the event with the anonymous specifier
  string topics = 6;

  // Timestamp of the block where this log was in
  google.protobuf.Timestamp block_timestamp = 7;

  // The block number where this log was in
  int64 block_number = 8;

  // Hash of the block where this log was in
  string block_hash = 9;
}
